--- a/PJA_Skills_032/App.xaml
+++ b/PJA_Skills_032/App.xaml
@@ -1,26 +1,25 @@
-﻿<Application
-    x:Class="PJA_Skills_032.App"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:PJA_Skills_032"
-    xmlns:presentation="using:PJA_Skills_032.Presentation"
-    RequestedTheme="Light">
+﻿<Application x:Class="PJA_Skills_032.App"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="using:PJA_Skills_032"
+             xmlns:presentation="using:PJA_Skills_032.Presentation"
+             RequestedTheme="Light">
 
     <Application.Resources>
         <!--<ResourceDictionary>
             <ResourceDictionary.ThemeDictionaries>
-                
+
             </ResourceDictionary.ThemeDictionaries>
         </ResourceDictionary>-->
-        <!--SCROLL-->
+        <!--  SCROLL  -->
         <Style x:Key="PageScrollViewerStyle" TargetType="ScrollViewer">
             <Setter Property="Padding" Value="24,20,24,24" />
             <Setter Property="Background" Value="{StaticResource accent}" />
         </Style>
 
-        <presentation:ObjectToMenuItemConverter x:Key="ObjectToMenuItemConverter"/>
+        <presentation:ObjectToMenuItemConverter x:Key="ObjectToMenuItemConverter" />
 
-        <!--COLORS-->
+        <!--  COLORS  -->
         <Color x:Key="primary">#F44336</Color>
         <Color x:Key="primary_dark">#D32F2F</Color>
         <Color x:Key="primary_light">#FFCDD2</Color>
@@ -31,15 +30,15 @@
         <Color x:Key="divider">#B6B6B6</Color>
         <Color x:Key="app_bar_red">#FFF44336</Color>
 
-        <!--GRID ITEM SKILL-->
+        <!--  PROFILE GRID ITEM SKILL  -->
         <Style x:Key="GridViewItemSkillStyle" TargetType="GridViewItem">
-            <Setter Property="Background" Value="#FFF44336"/>
+            <Setter Property="Background" Value="#FFF44336" />
             <Setter Property="Margin" Value="6" />
             <Setter Property="Foreground" Value="White" />
 
         </Style>
 
-        <!--PROFILE CARD SKILL-->
+        <!--  PROFILE CARD SKILL  -->
         <Style x:Key="ProfileCard" TargetType="StackPanel">
             <Setter Property="CornerRadius" Value="1" />
             <Setter Property="BorderThickness" Value="0" />
@@ -48,25 +47,33 @@
             <Setter Property="Margin" Value="10,0,10, 15" />
         </Style>
 
-        <Style x:Key="AppTitleTextBlockStyle" TargetType="TextBlock" BasedOn="{StaticResource BaseTextBlockStyle}">
+        <Style x:Key="AppTitleTextBlockStyle"
+               BasedOn="{StaticResource BaseTextBlockStyle}"
+               TargetType="TextBlock">
             <Setter Property="Margin" Value="12,6,0,6" />
             <Setter Property="VerticalAlignment" Value="Center" />
         </Style>
 
 
 
-        <Style x:Key="TitleTextBlockStyle" TargetType="TextBlock" BasedOn="{StaticResource TitleTextBlockStyle}">
+        <Style x:Key="TitleTextBlockStyle"
+               BasedOn="{StaticResource TitleTextBlockStyle}"
+               TargetType="TextBlock">
             <Setter Property="Margin" Value="0,1,0,18" />
         </Style>
 
 
-        <Style x:Key="ParagraphTextBlockStyle" TargetType="TextBlock" BasedOn="{StaticResource BodyTextBlockStyle}">
+        <Style x:Key="ParagraphTextBlockStyle"
+               BasedOn="{StaticResource BodyTextBlockStyle}"
+               TargetType="TextBlock">
             <Setter Property="Margin" Value="0,1,0,34" />
             <Setter Property="TextWrapping" Value="Wrap" />
             <Setter Property="TextTrimming" Value="CharacterEllipsis" />
         </Style>
 
-        <Style x:Key="IconButtonStyle" TargetType="Button" BasedOn="{StaticResource TextBlockButtonStyle}">
+        <Style x:Key="IconButtonStyle"
+               BasedOn="{StaticResource TextBlockButtonStyle}"
+               TargetType="Button">
             <Setter Property="FontFamily" Value="Segoe MDL2 Assets" />
             <Setter Property="FontSize" Value="20" />
             <Setter Property="Width" Value="48" />
@@ -82,22 +89,24 @@
             <Setter Property="TextAlignment" Value="Center" />
         </Style>
 
-        <Style x:Key="MenuTitleTextBlockStyle" TargetType="TextBlock" BasedOn="{StaticResource BodyTextBlockStyle}">
+        <Style x:Key="MenuTitleTextBlockStyle"
+               BasedOn="{StaticResource BodyTextBlockStyle}"
+               TargetType="TextBlock">
             <Setter Property="VerticalAlignment" Value="Center" />
         </Style>
         <Style x:Key="HomeUserSkillHorizontallPanel" TargetType="ListBoxItem">
-            <Setter Property="Background" Value="Red"/>
-            <Setter Property="TabNavigation" Value="Local"/>
+            <Setter Property="Background" Value="Red" />
+            <Setter Property="TabNavigation" Value="Local" />
             <Setter Property="Foreground" Value="White" />
-            
+
             <Setter Property="Margin" Value="1,0,1,0" />
-            
+
             <Setter Property="Height" Value="40" />
             <Setter Property="FontSize" Value="1" />
-            
-            <Setter Property="Padding" Value="12,11,12,13"/>
-            <Setter Property="HorizontalContentAlignment" Value="Left"/>
-            <Setter Property="UseSystemFocusVisuals" Value="True"/>
+
+            <Setter Property="Padding" Value="12,11,12,13" />
+            <Setter Property="HorizontalContentAlignment" Value="Left" />
+            <Setter Property="UseSystemFocusVisuals" Value="True" />
 
         </Style>
 
