trying to fix databinding

--- a/PJA_Skills_032/Pages/MyProfilePage.xaml
+++ b/PJA_Skills_032/Pages/MyProfilePage.xaml
@@ -5,13 +5,14 @@
       xmlns:data="using:PJA_Skills_032.Model"
       xmlns:local="using:PJA_Skills_032.Pages"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      Loaded="OnLoaded"
+      xmlns:viewModel="using:PJA_Skills_032.ViewModel"
+      Loading="MyProfilePage_OnLoading"
       mc:Ignorable="d">
 
     <Page.Resources>
         <DataTemplate x:Key="SkillGridViewTemplate" x:DataType="data:Skill">
             <StackPanel>
-                <TextBlock Text="{x:Bind Name}" />
+                <TextBlock Text="{x:Bind Name, Mode=OneWay}" />
             </StackPanel>
         </DataTemplate>
     </Page.Resources>
@@ -26,8 +27,6 @@
                           Label="Edit" />
         </CommandBar>
     </Page.BottomAppBar>
-
-
 
     <ScrollViewer Grid.RowSpan="2" Style="{StaticResource PageScrollViewerStyle}">
 
@@ -52,7 +51,7 @@
                        VerticalAlignment="Bottom"
                        FontWeight="Bold"
                        Style="{StaticResource TitleTextBlockStyle}"
-                       Text="{x:Bind ViewModel.CurrentUser.Name, Mode=OneWay}" />
+                       Text="{Binding CurrentUser.Name}" />
             <TextBlock x:Name="UserFaculty"
                        Height="30"
                        Margin="15,40,0,0"
@@ -65,6 +64,32 @@
                     <SolidColorBrush Color="{StaticResource app_bar_red}" />
                 </TextBlock.Foreground>
             </TextBlock>
+
+            <!--  KORKING  -->
+            <!--
+            <StackPanel x:Name="StackPanelToKorking"
+                        Grid.Row="4"
+                        Grid.ColumnSpan="2"
+                        Style="{StaticResource ProfileCard}">
+                <TextBlock x:Name="textBlock3"
+                           Height="21"
+                           Margin="9,3,9,0"
+                           Style="{StaticResource FlyoutPickerTitleTextBlockStyle}"
+                           Text="Want to provide korking:"
+                           TextWrapping="Wrap" />
+                <GridView ItemContainerStyle="{StaticResource GridViewItemSkillStyle}">
+
+                    <GridViewItem Content="PRM" />
+                    <GridViewItem Content="PPJ" />
+                    <GridViewItem Content="PPJ" />
+                    <GridViewItem Content="PPJ" />
+                    <GridViewItem Content="PRM" />
+                    <GridViewItem Content="PRM" />
+                    <GridViewItem Content="PRM" />
+                    <GridViewItem Content="PPJ" />
+
+                </GridView>
+            </StackPanel>-->
 
             <!--  SOCIAL  -->
             <StackPanel x:Name="StackPanelSocial"
@@ -122,9 +147,17 @@
                            Style="{StaticResource FlyoutPickerTitleTextBlockStyle}"
                            Text="Want to learn:"
                            TextWrapping="Wrap" />
-                <GridView ItemContainerStyle="{StaticResource GridViewItemSkillStyle}"
-                          ItemTemplate="{StaticResource SkillGridViewTemplate}"
-                          ItemsSource="{x:Bind ViewModel.CurrentUser.SkillsWantToLearn}" />
+                <GridView x:Name="GridViewLearn"
+                          ItemContainerStyle="{StaticResource GridViewItemSkillStyle}"
+                          ItemsSource="{x:Bind ViewModel.CurrentUser.SkillsWantToLearn, Mode=OneWay}">
+                    <GridView.ItemTemplate>
+                        <DataTemplate x:DataType="data:Skill">
+                            <StackPanel>
+                                <TextBlock Text="{x:Bind Name}" />
+                            </StackPanel>
+                        </DataTemplate>
+                    </GridView.ItemTemplate>
+                </GridView>
             </StackPanel>
 
             <!--  TEACH  -->
@@ -142,32 +175,6 @@
                           ItemTemplate="{StaticResource SkillGridViewTemplate}"
                           ItemsSource="{x:Bind ViewModel.CurrentUser.SkillsWantToLearn}" />
             </StackPanel>
-
-            <!--  KORKING  -->
-            <!--
-            <StackPanel x:Name="StackPanelToKorking"
-                        Grid.Row="4"
-                        Grid.ColumnSpan="2"
-                        Style="{StaticResource ProfileCard}">
-                <TextBlock x:Name="textBlock3"
-                           Height="21"
-                           Margin="9,3,9,0"
-                           Style="{StaticResource FlyoutPickerTitleTextBlockStyle}"
-                           Text="Want to provide korking:"
-                           TextWrapping="Wrap" />
-                <GridView ItemContainerStyle="{StaticResource GridViewItemSkillStyle}">
-
-                    <GridViewItem Content="PRM" />
-                    <GridViewItem Content="PPJ" />
-                    <GridViewItem Content="PPJ" />
-                    <GridViewItem Content="PPJ" />
-                    <GridViewItem Content="PRM" />
-                    <GridViewItem Content="PRM" />
-                    <GridViewItem Content="PRM" />
-                    <GridViewItem Content="PPJ" />
-
-                </GridView>
-            </StackPanel>-->
 
         </Grid>
 
