--- a/PJA_Skills_032/Pages/HomePage.xaml
+++ b/PJA_Skills_032/Pages/HomePage.xaml
@@ -31,12 +31,13 @@
         <!--  #region DataTemplate  -->
         <!--  When using x:Bind, you need to set x:DataType  -->
         <DataTemplate x:Key="SkillLearnListViewTemplate" x:DataType="data:Skill">
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="{x:Bind Name}" />
-            </StackPanel>
+            <TextBlock Text="{x:Bind Name}" />
         </DataTemplate>
+        <ItemsPanelTemplate x:Key="SkillListViewPanelTemplate">
+            <StackPanel Orientation="Horizontal" />
+        </ItemsPanelTemplate>
         <DataTemplate x:Name="ContactGridViewTemplate" x:DataType="data:TestUser">
-            <RelativePanel Margin="0,10, 0, 20">
+            <RelativePanel Margin="0,20, 0, 20" HorizontalAlignment="Left">
                 <Image x:Name="userImage"
                        Width="100"
                        Height="100"
@@ -65,6 +66,7 @@
                 <ListBox x:Name="SkillsWantToLearn"
                          ItemContainerStyle="{StaticResource HomeUserSkillHorizontallPanel}"
                          ItemTemplate="{StaticResource SkillLearnListViewTemplate}"
+                         ItemsPanel="{StaticResource SkillListViewPanelTemplate}"
                          ItemsSource="{x:Bind SkillsWantToLearn}"
                          RelativePanel.AlignTopWith="iconToLearn"
                          RelativePanel.RightOf="iconToLearn"
@@ -82,7 +84,8 @@
                          Margin="0,10,0,0"
                          ItemContainerStyle="{StaticResource HomeUserSkillHorizontallPanel}"
                          ItemTemplate="{StaticResource SkillLearnListViewTemplate}"
-                         ItemsSource="{x:Bind SkillsWantToTeach}"
+                         ItemsPanel="{StaticResource SkillListViewPanelTemplate}"
+                         ItemsSource="{x:Bind SkillsWantToLearn}"
                          RelativePanel.AlignTopWith="iconToTeach"
                          RelativePanel.RightOf="iconToTeach"
                          ScrollViewer.HorizontalScrollBarVisibility="Hidden"
@@ -131,9 +134,11 @@
 
     <ScrollViewer Style="{StaticResource PageScrollViewerStyle}">
         <StackPanel Orientation="Vertical">
-            <pages:HomeUserCard Label="Width:" Value="{x:Bind ViewModel.Width}" />
+            <!--<pages:HomeUserCard Label="Width:" Value="{x:Bind ViewModel.Width}" />-->
             <TextBlock Style="{StaticResource TitleTextBlockStyle}" Text="Home Page" />
-            <GridView ItemTemplate="{StaticResource ContactGridViewTemplate}" ItemsSource="{x:Bind ViewModel.Users}" />
+            <GridView HorizontalContentAlignment="Left"
+                      ItemTemplate="{StaticResource ContactGridViewTemplate}"
+                      ItemsSource="{x:Bind ViewModel.Users}" />
         </StackPanel>
     </ScrollViewer>
 
