--- a/PJA_Skills_032/Pages/MyProfilePage.xaml
+++ b/PJA_Skills_032/Pages/MyProfilePage.xaml
@@ -122,9 +122,7 @@
                            Style="{StaticResource FlyoutPickerTitleTextBlockStyle}"
                            Text="Want to learn:"
                            TextWrapping="Wrap" />
-                <GridView x:Name="GridViewLearn"
-                          ItemContainerStyle="{StaticResource GridViewItemSkillStyle}"
-                          ItemsSource="{x:Bind ViewModel.CurrentUser.SkillsWantToLearn, Mode=OneWay}">
+                <GridView x:Name="GridViewLearn" ItemContainerStyle="{StaticResource GridViewItemSkillStyle}">
                     <GridView.ItemTemplate>
                         <DataTemplate x:DataType="data:Skill">
                             <StackPanel>
@@ -146,9 +144,7 @@
                            Style="{StaticResource FlyoutPickerTitleTextBlockStyle}"
                            Text="Want to teach:"
                            TextWrapping="Wrap" />
-                <GridView ItemContainerStyle="{StaticResource GridViewItemSkillStyle}"
-                          ItemTemplate="{StaticResource SkillGridViewTemplate}"
-                          ItemsSource="{x:Bind }" />
+                <GridView ItemContainerStyle="{StaticResource GridViewItemSkillStyle}" ItemTemplate="{StaticResource SkillGridViewTemplate}" />
             </StackPanel>
 
         </Grid>
