--- a/PJA_Skills_032/Pages/UserPage.xaml
+++ b/PJA_Skills_032/Pages/UserPage.xaml
@@ -1,13 +1,13 @@
-﻿<Page x:Class="PJA_Skills_032.Pages.MyProfilePage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:data="using:PJA_Skills_032.Model"
-      xmlns:local="using:PJA_Skills_032.Pages"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:viewmodel="using:PJA_Skills_032.ViewModel"
-      Loading="MyProfilePage_OnLoading"
-      mc:Ignorable="d">
+﻿<Page
+    x:Class="PJA_Skills_032.Pages.UserPage"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="using:PJA_Skills_032.Pages"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Loading="UserPage_OnLoading"
+    
+    mc:Ignorable="d">
 
     <Page.Resources>
         <DataTemplate x:Key="SkillGridViewTemplate">
@@ -126,7 +126,7 @@
                           ItemContainerStyle="{StaticResource GridViewItemSkillStyle}"
                           ItemTemplate="{StaticResource SkillGridViewTemplate}"
                           ItemsSource="{x:Bind ViewModel.CurrentUser.SkillsWantToLearn, Mode=OneWay}">
-                  
+
                 </GridView>
             </StackPanel>
 
