--- a/PJA_Skills_032/Pages/HomePage.xaml
+++ b/PJA_Skills_032/Pages/HomePage.xaml
@@ -37,10 +37,13 @@
             <StackPanel Orientation="Horizontal" />
         </ItemsPanelTemplate>
         <DataTemplate x:Name="ContactGridViewTemplate" x:DataType="data:TestUser">
-            <RelativePanel Margin="0,20, 0, 20" HorizontalAlignment="Left">
+            <RelativePanel MaxWidth="250"
+                           Margin="5,20, 5, 20"
+                           HorizontalAlignment="Left">
                 <Image x:Name="userImage"
                        Width="100"
                        Height="100"
+                       HorizontalAlignment="Left"
                        Source="ms-appx:///Assets/LockScreenLogo.png" />
                 <TextBlock x:Name="userName"
                            Margin="4,4,0,4"
@@ -135,10 +138,12 @@
     <ScrollViewer Style="{StaticResource PageScrollViewerStyle}">
         <StackPanel Orientation="Vertical">
             <!--<pages:HomeUserCard Label="Width:" Value="{x:Bind ViewModel.Width}" />-->
-            <TextBlock Style="{StaticResource TitleTextBlockStyle}" Text="Home Page" />
-            <GridView HorizontalContentAlignment="Left"
+            <!--<TextBlock Style="{StaticResource TitleTextBlockStyle}" Text="Home Page" />-->
+            <GridView x:Name="GridViewUsers"
+                      HorizontalContentAlignment="Left"
                       ItemTemplate="{StaticResource ContactGridViewTemplate}"
-                      ItemsSource="{x:Bind ViewModel.Users}" />
+                      ItemsSource="{x:Bind ViewModel.Users}"
+                      SelectionChanged="GridView_SelectionChanged" />
         </StackPanel>
     </ScrollViewer>
 
